[package]
name = "procnuke"
version = "0.2.2"
edition = "2021"
authors = ["Kihau"]
repository = "https://github.com/Kihau/procnuke"

# The general section with crate name, license, etc.
# build = "build.rs"

[dependencies]
# libprocnuke = { path = "lib/libprocnuke" }

# TODO:
# [target.'cfg(target_os="windows")'.build-dependencies]
# embed-resource = "1.4"
